# differ

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/git-core/: Cargo.toml
crates/git-core/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
e2e/: 01-file-list-and-diff.spec.ts  02-comparison-picker.spec.ts  03-settings.spec.ts  04-keyboard-navigation.spec.ts  05-pull.spec.ts  06-hunk-and-path-actions.spec.ts  07-commit-and-revert.spec.ts  08-push.spec.ts  diff-viewer.spec.ts
e2e/fixtures/: build-fixture.mjs  paths.ts
e2e/scripts/: start-headless-server.mjs
scripts/: copy-wasm.mjs
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: git.rs  lib.rs  main.rs
src/lib/components/: CommitPanel.svelte  ComparisonBar.svelte  FileDiffView.svelte  FileList.svelte  FileTree.svelte  ImageDiff.svelte  RawDiff.svelte  SemanticTree.svelte  Settings.svelte  SplitDiff.svelte  StoryMode.svelte  Welcome.svelte  comparison.test.ts  comparison.ts  file-tree.test.ts  file-tree.ts  format.ts  fuzzy.test.ts  fuzzy.ts  segments.ts  staging.ts  symbol-path.ts
src/lib/engine/: analyze.ts  blast-radius.test.ts  blast-radius.ts  build.test.ts  build.ts  correlate.ts  dup-index.test.ts  dup-index.ts  duplicates.test.ts  duplicates.ts  extract.test.ts  extract.ts  highlight.test.ts  highlight.ts  importance.test.ts  importance.ts  languages.ts  media.test.ts  media.ts  model.ts  parser.ts  semantic-diff.test.ts  semantic-diff.ts  similarity.test.ts  similarity.ts  text-diff.test.ts  text-diff.ts  wasm-browser.ts  wasm-node.ts
src/lib/sources/: base64.ts  http-git.ts  memory.ts  recent.ts  samples.ts  source.ts  tauri-git.ts
src/lib/worker/: client.ts  engine.worker.ts  index-pool.ts  protocol.ts  ts-env-shim.ts
