[package]
name = "diff-viewer"
version = "0.1.0"
description = "A fast text + semantic diff viewer"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
# Tauri v2 keeps app logic in a lib so mobile targets can reuse it.
name = "diff_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Shared git logic, reused by the headless server (crates/server).
git-core = { path = "../crates/git-core" }
