[package]
name = "server"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "diff-viewer-server"
path = "src/main.rs"

[dependencies]
git-core = { path = "../git-core" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CORS: the frontend is typically served from a different origin/port than
# this API (e.g. Vite dev server vs. the axum server) — see AppState doc.
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
git2 = { version = "0.19", default-features = false }
